Закончил верстку блока cards-today

--- a/index.html
+++ b/index.html
@@ -157,11 +157,15 @@
           </div>
           <!-- /.cards-today__info -->
           <div class="cards-today__block">
-            <img
-              src="images/icon-facebook.svg"
-              alt="icon-facebook"
-              class="cards-today__icon"
-            />
+            <div class="cards-today__wrapper-icon">
+              <img
+                src="images/icon-facebook.svg"
+                alt="icon-facebook"
+                class="cards-today__icon"
+              />
+            </div>
+            <!-- /.cards-today__wrapper-icon -->
+
             <div class="cards-today__statistic">
               <img
                 src="images/icon-up.svg"
@@ -177,23 +181,26 @@
         <!-- /.cards-today -->
         <div class="cards-today">
           <div class="cards-today__info">
-            <span class="cards-today__type">Page Views</span>
-            <span class="cards-today__count">87</span>
+            <span class="cards-today__type">Likes</span>
+            <span class="cards-today__count">52</span>
           </div>
           <!-- /.cards-today__info -->
           <div class="cards-today__block">
-            <img
-              src="images/icon-facebook.svg"
-              alt="icon-facebook"
-              class="cards-today__icon"
-            />
+            <div class="cards-today__wrapper-icon">
+              <img
+                src="images/icon-facebook.svg"
+                alt="icon-facebook"
+                class="cards-today__icon"
+              />
+            </div>
+            <!-- /.cards-today__wrapper-icon -->
             <div class="cards-today__statistic">
               <img
-                src="images/icon-up.svg"
-                alt="Icon: arrow UP"
+                src="images/icon-down.svg"
+                alt="Icon: arrow DOWN"
                 class="cards-today__statistic-icon"
               />
-              <span class="cards-today__statistic-text">3%</span>
+              <span class="cards-today__statistic-text arrow-down">2%</span>
             </div>
             <!-- /.cards-today__statistic -->
           </div>
@@ -202,23 +209,26 @@
         <!-- /.cards-today -->
         <div class="cards-today">
           <div class="cards-today__info">
-            <span class="cards-today__type">Page Views</span>
-            <span class="cards-today__count">87</span>
+            <span class="cards-today__type">Likes</span>
+            <span class="cards-today__count">5462</span>
           </div>
           <!-- /.cards-today__info -->
           <div class="cards-today__block">
-            <img
-              src="images/icon-facebook.svg"
-              alt="icon-facebook"
-              class="cards-today__icon"
-            />
+            <div class="cards-today__wrapper-icon">
+              <img
+                src="images/icon-instagram.svg"
+                alt="icon-instagram"
+                class="cards-today__icon"
+              />
+            </div>
+            <!-- /.cards-today__wrapper-icon -->
             <div class="cards-today__statistic">
               <img
                 src="images/icon-up.svg"
                 alt="Icon: arrow UP"
                 class="cards-today__statistic-icon"
               />
-              <span class="cards-today__statistic-text">3%</span>
+              <span class="cards-today__statistic-text">2257%</span>
             </div>
             <!-- /.cards-today__statistic -->
           </div>
@@ -227,23 +237,26 @@
         <!-- /.cards-today -->
         <div class="cards-today">
           <div class="cards-today__info">
-            <span class="cards-today__type">Page Views</span>
-            <span class="cards-today__count">87</span>
+            <span class="cards-today__type">Profile Views</span>
+            <span class="cards-today__count">52k</span>
           </div>
           <!-- /.cards-today__info -->
           <div class="cards-today__block">
-            <img
-              src="images/icon-facebook.svg"
-              alt="icon-facebook"
-              class="cards-today__icon"
-            />
+            <div class="cards-today__wrapper-icon">
+              <img
+                src="images/icon-instagram.svg"
+                alt="icon-instagram"
+                class="cards-today__icon"
+              />
+            </div>
+            <!-- /.cards-today__wrapper-icon -->
             <div class="cards-today__statistic">
               <img
                 src="images/icon-up.svg"
                 alt="Icon: arrow UP"
                 class="cards-today__statistic-icon"
               />
-              <span class="cards-today__statistic-text">3%</span>
+              <span class="cards-today__statistic-text">1375%</span>
             </div>
             <!-- /.cards-today__statistic -->
           </div>
@@ -252,23 +265,26 @@
         <!-- /.cards-today -->
         <div class="cards-today">
           <div class="cards-today__info">
-            <span class="cards-today__type">Page Views</span>
-            <span class="cards-today__count">87</span>
+            <span class="cards-today__type">Retweets</span>
+            <span class="cards-today__count">117</span>
           </div>
           <!-- /.cards-today__info -->
           <div class="cards-today__block">
-            <img
-              src="images/icon-facebook.svg"
-              alt="icon-facebook"
-              class="cards-today__icon"
-            />
+            <div class="cards-today__wrapper-icon">
+              <img
+                src="images/icon-twitter.svg"
+                alt="icon-twitter"
+                class="cards-today__icon"
+              />
+            </div>
+            <!-- /.cards-today__wrapper-icon -->
             <div class="cards-today__statistic">
               <img
                 src="images/icon-up.svg"
                 alt="Icon: arrow UP"
                 class="cards-today__statistic-icon"
               />
-              <span class="cards-today__statistic-text">3%</span>
+              <span class="cards-today__statistic-text">303%</span>
             </div>
             <!-- /.cards-today__statistic -->
           </div>
@@ -277,23 +293,26 @@
         <!-- /.cards-today -->
         <div class="cards-today">
           <div class="cards-today__info">
-            <span class="cards-today__type">Page Views</span>
-            <span class="cards-today__count">87</span>
+            <span class="cards-today__type">Likes</span>
+            <span class="cards-today__count">507</span>
           </div>
           <!-- /.cards-today__info -->
           <div class="cards-today__block">
-            <img
-              src="images/icon-facebook.svg"
-              alt="icon-facebook"
-              class="cards-today__icon"
-            />
+            <div class="cards-today__wrapper-icon">
+              <img
+                src="images/icon-twitter.svg"
+                alt="icon-twitter"
+                class="cards-today__icon"
+              />
+            </div>
+            <!-- /.cards-today__wrapper-icon -->
             <div class="cards-today__statistic">
               <img
                 src="images/icon-up.svg"
                 alt="Icon: arrow UP"
                 class="cards-today__statistic-icon"
               />
-              <span class="cards-today__statistic-text">3%</span>
+              <span class="cards-today__statistic-text">553%</span>
             </div>
             <!-- /.cards-today__statistic -->
           </div>
@@ -302,23 +321,26 @@
         <!-- /.cards-today -->
         <div class="cards-today">
           <div class="cards-today__info">
-            <span class="cards-today__type">Page Views</span>
-            <span class="cards-today__count">87</span>
+            <span class="cards-today__type">Likes</span>
+            <span class="cards-today__count">107</span>
           </div>
           <!-- /.cards-today__info -->
           <div class="cards-today__block">
-            <img
-              src="images/icon-facebook.svg"
-              alt="icon-facebook"
-              class="cards-today__icon"
-            />
+            <div class="cards-today__wrapper-icon">
+              <img
+                src="images/icon-youtube.svg"
+                alt="icon-youtube"
+                class="cards-today__icon"
+              />
+            </div>
+            <!-- /.cards-today__wrapper-icon -->
             <div class="cards-today__statistic">
               <img
-                src="images/icon-up.svg"
-                alt="Icon: arrow UP"
+                src="images/icon-down.svg"
+                alt="Icon: arrow down"
                 class="cards-today__statistic-icon"
               />
-              <span class="cards-today__statistic-text">3%</span>
+              <span class="cards-today__statistic-text arrow-down">19%</span>
             </div>
             <!-- /.cards-today__statistic -->
           </div>
@@ -327,23 +349,26 @@
         <!-- /.cards-today -->
         <div class="cards-today">
           <div class="cards-today__info">
-            <span class="cards-today__type">Page Views</span>
-            <span class="cards-today__count">87</span>
+            <span class="cards-today__type">Total Views</span>
+            <span class="cards-today__count">1407</span>
           </div>
           <!-- /.cards-today__info -->
           <div class="cards-today__block">
-            <img
-              src="images/icon-facebook.svg"
-              alt="icon-facebook"
-              class="cards-today__icon"
-            />
+            <div class="cards-today__wrapper-icon">
+              <img
+                src="images/icon-youtube.svg"
+                alt="icon-youtube"
+                class="cards-today__icon"
+              />
+            </div>
+            <!-- /.cards-today__wrapper-icon -->
             <div class="cards-today__statistic">
               <img
-                src="images/icon-up.svg"
-                alt="Icon: arrow UP"
+                src="images/icon-down.svg"
+                alt="Icon: arrow down"
                 class="cards-today__statistic-icon"
               />
-              <span class="cards-today__statistic-text">3%</span>
+              <span class="cards-today__statistic-text">12%</span>
             </div>
             <!-- /.cards-today__statistic -->
           </div>
@@ -352,9 +377,6 @@
         <!-- /.cards-today -->
       </div>
       <!-- /.cards-diff -->
-
-      3% Likes 52 2% Likes 5462 2257% Profile Views 52k 1375% Retweets 117 303%
-      Likes 507 553% Likes 107 19% Total Views 1407 12%
     </main>
   </body>
 </html>
