--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
 
       <fieldset class="header-toggle toggle" role="radiogroup">
         <label for="dark">Dark</label>
+        <label for="system">System</label>
+        <label for="light">Light</label>
         <div class="toggle__wrapper">
           <input class="toggle__input" type="radio" name="theme" id="dark" />
           <input
@@ -44,8 +46,6 @@
           <span aria-hidden="true" class="toggle__button"></span>
         </div>
         <!-- /.toggle__wrapper -->
-        <label for="system">System</label>
-        <label for="light">Light</label>
       </fieldset>
     </header>
     <main class="cards container">
@@ -141,7 +141,7 @@
               alt="Icon: arrow UP"
               class="cards-item__today-icon"
             />
-            <span class="cards-item__today-text">144 Today</span>
+            <span class="cards-item__today-text arrow-down">144 Today</span>
           </div>
           <!-- /.cards-item__statistic -->
         </div>
