--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     </header>
     <main>
       <section class="cards container">
-        <div class="cards-top">
+        <div class="cards-top cards-top--mb-2">
           <div class="cards-item">
             <span class="cards-inline cards-inline--facebook"></span>
             <div class="cards-item__info">
